--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -20,6 +20,12 @@
 
     <div class="blogs content">
       <h2>All blogs</h2>
+      <% if(blogs.length > 0){ %> <% blogs.forEach((blog) => { %>
+      <h3 class="title"><%= blog.title %></h3>
+      <p class="snippet"><%= blog.snippet %></p>
+      <% }); %> <% } else { %>
+      <h3>No blogs found</h3>
+      <% } %>
     </div>
   </body>
 </html>
