--- a/src/views/404.ejs
+++ b/src/views/404.ejs
@@ -1,23 +1,11 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Node.js Page</title>
-  </head>
+  <%- include('./partials/head.ejs') %>
 
   <body>
-    <nav>
-      <div class="site-title">
-        <a href="/"><h1>Blog</h1></a>
-        <p>A Blog site</p>
-      </div>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/blogs/create">New Blog</a></li>
-      </ul>
-    </nav>
+    <%- include('./partials/nav.ejs') %>
 
     <div class="not-found content">Oops! Page not found</div>
+
+    <%- include('./partials/footer.ejs') %>
   </body>
 </html>
