--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,22 +1,9 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Node.js Page</title>
-  </head>
+  <%- include('./partials/head.ejs') %>
 
   <body>
-    <nav>
-      <div class="site-title">
-        <a href="/"><h1>Blog</h1></a>
-        <p>A Blog site</p>
-      </div>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/blogs/create">New Blog</a></li>
-      </ul>
-    </nav>
+    <!-- use %- to include partials -->
+    <%- include('./partials/nav.ejs') %>
 
     <div class="blogs content">
       <h2>All blogs</h2>
@@ -27,5 +14,7 @@
       <h3>No blogs found</h3>
       <% } %>
     </div>
+
+    <%- include('./partials/footer.ejs') %>
   </body>
 </html>
