--- a/src/views/create.ejs
+++ b/src/views/create.ejs
@@ -5,11 +5,12 @@
     <%- include('./partials/nav.ejs') %>
 
     <div class="create-blog content">
-      <form>
+      <form action="/blogs" method="POST">
         <label for="title">Blog title:</label>
         <input type="text" id="title" name="title" required />
-        <label for="snippet">Blog snippet:</label>
-        <input type="text" id="snippet" name="snippet" required />
+        <label for="snippets">Blog snippet:</label>
+        <!-- the input filed's key is determined by the input "name" -->
+        <input type="text" id="snippets" name="snippets" required />
         <label for="body">Blog body:</label>
         <textarea id="body" name="body" required></textarea>
         <button>Submit</button>
