--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,7 +9,7 @@
       <h2>All blogs</h2>
       <% if(blogs.length > 0){ %> <% blogs.forEach((blog) => { %>
       <h3 class="title"><%= blog.title %></h3>
-      <p class="snippet"><%= blog.snippet %></p>
+      <p class="snippet"><%= blog.snippets %></p>
       <% }); %> <% } else { %>
       <h3>No blogs found</h3>
       <% } %>
