refactor: move views

--- a/src/views/blogs/details.ejs
+++ b/src/views/blogs/details.ejs
@@ -1,8 +1,8 @@
 <html lang="en">
-  <%- include("./partials/head.ejs") %>
+  <%- include("../partials/head.ejs") %>
 
   <body>
-    <%- include("./partials/nav.ejs") %>
+    <%- include("../partials/nav.ejs") %>
 
     <div class="details content">
       <h2><%= blog.title %></h2>
@@ -28,6 +28,6 @@
       });
     </script>
 
-    <%- include("./partials/footer.ejs") %>
+    <%- include("../partials/footer.ejs") %>
   </body>
 </html>
