--- a/src/views/auths/login.ejs
+++ b/src/views/auths/login.ejs
@@ -2,8 +2,29 @@
   <%- include('../partials/head'); -%>
   <body>
     <%- include('../partials/nav'); -%>
-    <h1>Login</h1>
+    <form>
+      <h2>Login</h2>
+      <label for="email">Email:</label>
+      <input type="text" id="email" name="email" required />
+      <div class="email error"></div>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required />
+      <div class="password error"></div>
+      <button>Login</button>
+    </form>
 
+    <script>
+      const form = document.querySelector("form");
+
+      form.addEventListener("submit", (e) => {
+        e.preventDefault(); // prevent refreshing the page
+
+        const email = form.email.value;
+        const password = form.password.value;
+
+        console.log(email, password);
+      });
+    </script>
     <%- include('../partials/footer'); -%>
   </body>
 </html>
