--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -5,6 +5,7 @@
   </div>
   <ul>
     <li><a href="/login">Login</a></li>
+    <li><a href="/logout">Log out</a></li>
     <li><a href="/">Home</a></li>
     <li><a href="/about">About</a></li>
     <li><a href="/blogs/create">New Blog</a></li>
